--- a/app/src/main/res/drawable/launch_screen.xml
+++ b/app/src/main/res/drawable/launch_screen.xml
@@ -18,7 +18,7 @@
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@color/colorBackground"/>
+    <item android:drawable="@color/colorWindowBackground"/>
 
     <item android:gravity="center">
         <bitmap android:src="@mipmap/ic_launch_screen"/>
