--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -17,31 +17,28 @@
   -->
 
 <resources>
-    <color name="colorPrimary">#1A73E8</color>
-    <color name="colorSecondary">#1A73E8</color>
-    <color name="colorSurface">#FFFFFF</color>
+    <color name="colorPrimary">#FF8000</color>
+    <color name="colorSecondary">#FF8000</color>
+    <color name="colorSurface">#3C3F41</color>
     <color name="colorError">#E45356</color>
-    <color name="colorBackground">#FFFFFF</color>
+    <color name="colorBackground">#303030</color>
 
-    <color name="colorSecondaryVariant">#FFFFFF</color>
+    <color name="colorSecondaryVariant">#37383A</color>
 
-    <color name="colorOnPrimary">#FFFFFF</color>
-    <color name="colorOnSecondary">#FFFFFF</color>
-    <color name="colorOnSurface">#000000</color>
+    <color name="colorOnPrimary">#000000</color>
+    <color name="colorOnSecondary">#000000</color>
+    <color name="colorOnSurface">#FFFFFF</color>
     <color name="colorOnError">#FFFFFF</color>
-    <color name="colorOnBackground">#757575</color>
+    <color name="colorOnBackground">#7F7F7F</color>
 
-    <color name="colorLegacyLightStatusBar">#C9C9C9</color>
-    <color name="colorLegacyLightNavigationBar">#C9C9C9</color>
-
-    <color name="colorStatusBar">#F0F0F0</color>
-    <color name="colorNavigationBar">#F0F0F0</color>
+    <color name="colorStatusBar">#3C3F41</color>
+    <color name="colorNavigationBar">#37383A</color>
     <color name="colorWindowBackground">#303030</color>
 
     <!-- Extra -->
-    <color name="colorIcon">#757575</color>
+    <color name="colorIcon">#7F7F7F</color>
     <color name="colorCaret">#BBBBBB</color>
-    <color name="colorFile">#757575</color>
+    <color name="colorFile">#7F7F7F</color>
     <color name="colorFolder">#FFBB33</color>
     <color name="colorGreen">#008860</color>
     <color name="colorRed">#CD0000</color>
