--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,6 +62,23 @@
     <!-- endregion MENU -->
 
     <!-- region DIALOG -->
+
+    <style name="MD_Light" parent="Theme.AppCompat.Light.Dialog.Alert" tools:ignore="PrivateResource">
+        <item name="android:windowMinWidthMajor">@dimen/abc_dialog_min_width_major</item>
+        <item name="android:windowMinWidthMinor">@dimen/abc_dialog_min_width_minor</item>
+
+        <item name="android:actionModeBackground">@color/primary_material_dark</item>
+        <item name="android:actionModeCloseDrawable">@drawable/md_nav_back</item>
+
+        <item name="android:windowAnimationStyle">@style/MD_WindowAnimation</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.32</item> <!-- new line -->
+        <item name="android:windowNoTitle">true</item>
+
+        <item name="md_divider_color">@color/md_divider_light_theme</item>
+        <item name="md_item_selector">@drawable/md_item_selector</item>
+        <item name="md_button_selector">@drawable/md_btn_selector</item>
+    </style>
     
     <style name="MD_Dark" parent="Theme.AppCompat.Dialog.Alert" tools:ignore="PrivateResource">
         <item name="android:windowMinWidthMajor">@dimen/abc_dialog_min_width_major</item>
